# routes/moviesRoutes.js
@@ -1,11 +1,13 @@
 const express = require('express');
 const router = express.Router();
 const movies = require('../controllers/moviesController');
+const { ensureAuth } = require('../middlewares/auth');
 
 router.get('/', movies.getAllMovies);
 router.get('/:id', movies.getMovie);
-router.post('/', movies.createMovie);
-router.put('/:id', movies.updateMovie);
-router.delete('/:id', movies.deleteMovie);
+
+router.post('/', ensureAuth, movies.createMovie);
+router.put('/:id', ensureAuth, movies.updateMovie);
+router.delete('/:id', ensureAuth, movies.deleteMovie);
 
 module.exports = router;
